--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="sr">
 <head>
     <meta charset="utf-8">
-    <title>Formular</title>
+    <title>HTML FORM</title>
+	<link rel="icon" href="https://www.nonisha.tech/favicon.ico" type="image/x-icon" />
     <link href="style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
